--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,12 @@
   color: white;
   opacity: 0.5;
   margin-right: 15px;
+  
+}
+
+.slick-dots {
+  text-align: center;
+  width: 150vh;
 }
 
 form {
@@ -127,10 +133,12 @@ form {
 .slick-dots li.slick-active button:before {
   color: white;
   opacity: 1;
+  
 }
 
 .custom-dot {
   padding-right: 8px !important;
+  
 }
 
 .image-shadow-gradient {
